youfull/objects/Sales_Org_Ldrship_MktTags__c.object
<CustomObject>
    <fields>
        <fullName>BLW_MIN_NON_LDRSHP_AWRD_SLS_AMT__c</fullName>
        <label>BLW_MIN_NON_LDRSHP_AWRD_SLS_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BUS_MRKT_TAG_1_AMT__c</fullName>
        <label>BUS_MRKT_TAG_1_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BUS_MRKT_TAG_2_NR__c</fullName>
        <label>BUS_MRKT_TAG_2_NR</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BUS_MRKT_TAG_3_PCT__c</fullName>
        <label>BUS_MRKT_TAG_3_PCT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BUS_MRKT_TAG_4_TXT__c</fullName>
        <label>BUS_MRKT_TAG_4_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_FAP_AWRD_SLS__c</fullName>
        <label>DWNLN_NON_LDR_FAP_AWRD_SLS</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_FAP_CNT__c</fullName>
        <label>DWNLN_NON_LDR_FAP_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_MRKT_TAG_1_AMT__c</fullName>
        <label>DWNLN_NON_LDR_MRKT_TAG_1_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_MRKT_TAG_2_TXT__c</fullName>
        <label>DWNLN_NON_LDR_MRKT_TAG_2_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_MRKT_TAG_3_TXT__c</fullName>
        <label>DWNLN_NON_LDR_MRKT_TAG_3_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_MRKT_TAG_4_PCT__c</fullName>
        <label>DWNLN_NON_LDR_MRKT_TAG_4_PCT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_ORD_INV_AMT__c</fullName>
        <label>DWNLN_NON_LDR_ORD_INV_AMT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_ORD_INV_CNT__c</fullName>
        <label>DWNLN_NON_LDR_ORD_INV_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_REP_NO_ACTVTY_CNT__c</fullName>
        <label>DWNLN_NON_LDR_REP_NO_ACTVTY_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_REP_WITH_FAP_CNT__c</fullName>
        <label>DWNLN_NON_LDR_REP_WITH_FAP_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_SBMTD_ORD_AMT__c</fullName>
        <label>DWNLN_NON_LDR_SBMTD_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DWNLN_NON_LDR_SBMTD_ORD_CNT__c</fullName>
        <label>DWNLN_NON_LDR_SBMTD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_AVG_CUST_CNT__c</fullName>
        <label>LDRSHP_AVG_CUST_CNT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_AVG_MULT_ORD_AMT__c</fullName>
        <label>LDRSHP_AVG_MULT_ORD_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_MRKT_TAG_2_TXT__c</fullName>
        <label>LDRSHP_MRKT_TAG_2_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDRSHP_MRKT_TAG_3_TXT__c</fullName>
        <label>LDRSHP_MRKT_TAG_3_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_1_MRKT_TAG_3_TXT__c</fullName>
        <label>LDRSHP_TITL_1_MRKT_TAG_3_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_2_MRKT_TAG_3_TXT__c</fullName>
        <label>LDRSHP_TITL_2_MRKT_TAG_3_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_3_MRKT_TAG_3_TXT__c</fullName>
        <label>LDRSHP_TITL_3_MRKT_TAG_3_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_ID_ZONE_CD_KEY__c</fullName>
        <externalId>true</externalId>
        <label>MRKT_ID_ZONE_CD_KEY</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MRKT_ID__c</fullName>
        <label>MRKT_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Analysis__c</fullName>
        <label>Market Analysis</label>
        <referenceTo>Sales_Org_Leadership__c</referenceTo>
        <relationshipName>Sales_Org_Ldrship_Mkt_Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_FAP_AWRD_SLS__c</fullName>
        <label>NC_LDRSHP_FAP_AWRD_SLS</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_FAP_CNT__c</fullName>
        <label>NC_LDRSHP_FAP_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_MRKT_TAG_1_AMT__c</fullName>
        <label>NC_LDRSHP_MRKT_TAG_1_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_MRKT_TAG_2_TXT__c</fullName>
        <label>NC_LDRSHP_MRKT_TAG_2_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_MRKT_TAG_3_TXT__c</fullName>
        <label>NC_LDRSHP_MRKT_TAG_3_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_MRKT_TAG_4_PCT__c</fullName>
        <label>NC_LDRSHP_MRKT_TAG_4_PCT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_ORD_INV_AMT__c</fullName>
        <label>NC_LDRSHP_ORD_INV_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_ORD_INV_CNT__c</fullName>
        <label>NC_LDRSHP_ORD_INV_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_REP_NO_ACTVTY_CNT__c</fullName>
        <label>NC_LDRSHP_REP_NO_ACTVTY_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_SBMTD_ORD_AMT__c</fullName>
        <label>NC_LDRSHP_SBMTD_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NC_LDRSHP_SBMTD_ORD_CNT__c</fullName>
        <label>NC_LDRSHP_SBMTD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_REP_WITH_FAP_CNT__c</fullName>
        <label>NC_REP_WITH_FAP_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_BRCHR_CNT__c</fullName>
        <label>NON_LDRSHP_BRCHR_CNT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_DEMO_ITEM_CNT__c</fullName>
        <label>NON_LDRSHP_DEMO_ITEM_CNT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_FRST_ORD_CNT__c</fullName>
        <label>NON_LDRSHP_FRST_ORD_CNT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_ORD_INV_AMT__c</fullName>
        <label>NON_LDRSHP_ORD_INV_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_ORD_INV_CNT__c</fullName>
        <label>NON_LDRSHP_ORD_INV_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_REP_NO_ACTVTY_CNT__c</fullName>
        <label>NON_LDRSHP_REP_NO_ACTVTY_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_SBMTD_ORD_AMT__c</fullName>
        <label>NON_LDRSHP_SBMTD_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NON_LDRSHP_SBMTD_ORD_CNT__c</fullName>
        <label>NON_LDRSHP_SBMTD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NON_LRDSHP_WK4_MULT_ORD_CNT__c</fullName>
        <label>NON_LRDSHP_WK4_MULT_ORD_CNT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPERTNL_CMPGN_NR__c</fullName>
        <label>OPERTNL_CMPGN_NR</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORD_MRKT_TAG_1_AMT__c</fullName>
        <label>ORD_MRKT_TAG_1_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORD_MRKT_TAG_2_NR__c</fullName>
        <label>ORD_MRKT_TAG_2_NR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORD_MRKT_TAG_3_PCT__c</fullName>
        <label>ORD_MRKT_TAG_3_PCT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORD_MRKT_TAG_4_TXT__c</fullName>
        <label>ORD_MRKT_TAG_4_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_BLW_MIN_NON_LDRSHP_AWRD_SLS_AMT__c</fullName>
        <label>PC_BLW_MIN_NON_LDRSHP_AWRD_SLS_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_BUS_MRKT_TAG_1_AMT__c</fullName>
        <label>PC_BUS_MRKT_TAG_1_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_BUS_MRKT_TAG_2_NR__c</fullName>
        <label>PC_BUS_MRKT_TAG_2_NR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_BUS_MRKT_TAG_3_PCT__c</fullName>
        <label>PC_BUS_MRKT_TAG_3_PCT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_BUS_MRKT_TAG_4_TXT__c</fullName>
        <label>PC_BUS_MRKT_TAG_4_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_AVG_CUST_CNT__c</fullName>
        <label>PC_LDRSHP_AVG_CUST_CNT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_AVG_MULT_ORD_AMT__c</fullName>
        <label>PC_LDRSHP_AVG_MULT_ORD_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_FAP_AWRD_SLS__c</fullName>
        <label>PC_LDRSHP_FAP_AWRD_SLS</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_FAP_CNT__c</fullName>
        <label>PC_LDRSHP_FAP_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_MRKT_TAG_1_AMT__c</fullName>
        <label>PC_LDRSHP_MRKT_TAG_1_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_MRKT_TAG_2_TXT__c</fullName>
        <label>PC_LDRSHP_MRKT_TAG_2_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_MRKT_TAG_3_TXT__c</fullName>
        <label>PC_LDRSHP_MRKT_TAG_3_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_MRKT_TAG_4_PCT__c</fullName>
        <label>PC_LDRSHP_MRKT_TAG_4_PCT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_ORD_INV_AMT__c</fullName>
        <label>PC_LDRSHP_ORD_INV_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_ORD_INV_CNT__c</fullName>
        <label>PC_LDRSHP_ORD_INV_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_REP_NO_ACTVTY_CNT__c</fullName>
        <label>PC_LDRSHP_REP_NO_ACTVTY_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_SBMTD_ORD_AMT__c</fullName>
        <label>PC_LDRSHP_SBMTD_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_SBMTD_ORD_CNT__c</fullName>
        <label>PC_LDRSHP_SBMTD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_ABV_MIN_CNT__c</fullName>
        <label>PC_NON_LDRSHP_ABV_MIN_CNT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_BRCHR_CNT__c</fullName>
        <label>PC_NON_LDRSHP_BRCHR_CNT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_CUST_CNT__c</fullName>
        <label>PC_NON_LDRSHP_CUST_CNT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_DEMO_ITEM_CNT__c</fullName>
        <label>PC_NON_LDRSHP_DEMO_ITEM_CNT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_FRST_ORD_CNT__c</fullName>
        <label>PC_NON_LDRSHP_FRST_ORD_CNT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_NET_SLS_AMT__c</fullName>
        <label>PC_NON_LDRSHP_NET_SLS_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_ORD_INV_AMT__c</fullName>
        <label>PC_NON_LDRSHP_ORD_INV_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_ORD_INV_CNT__c</fullName>
        <label>PC_NON_LDRSHP_ORD_INV_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_REP_NO_ACTVTY_CNT__c</fullName>
        <label>PC_NON_LDRSHP_REP_NO_ACTVTY_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_RTURN_AMT__c</fullName>
        <label>PC_NON_LDRSHP_RTURN_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_SBMTD_ORD_AMT__c</fullName>
        <label>PC_NON_LDRSHP_SBMTD_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_SBMTD_ORD_CNT__c</fullName>
        <label>PC_NON_LDRSHP_SBMTD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_UND_MIN_CNT__c</fullName>
        <label>PC_NON_LDRSHP_UND_MIN_CNT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_WK4_MULT_ORD_CNT__c</fullName>
        <label>PC_NON_LDRSHP_WK4_MULT_ORD_CNT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_ORD_MRKT_TAG_1_AMT__c</fullName>
        <label>PC_ORD_MRKT_TAG_1_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_ORD_MRKT_TAG_2_NR__c</fullName>
        <label>PC_ORD_MRKT_TAG_2_NR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_ORD_MRKT_TAG_3_PCT__c</fullName>
        <label>PC_ORD_MRKT_TAG_3_PCT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_ORD_MRKT_TAG_4_TXT__c</fullName>
        <label>PC_ORD_MRKT_TAG_4_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_REP_WITH_FAP_CNT__c</fullName>
        <label>PC_REP_WITH_FAP_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_SLS_MRKT_TAG_1_AMT__c</fullName>
        <label>PC_SLS_MRKT_TAG_1_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_SLS_MRKT_TAG_2_NR__c</fullName>
        <label>PC_SLS_MRKT_TAG_2_NR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_SLS_MRKT_TAG_3_PCT__c</fullName>
        <label>PC_SLS_MRKT_TAG_3_PCT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_SLS_MRKT_TAG_4_TXT__c</fullName>
        <label>PC_SLS_MRKT_TAG_4_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_FAP_AWRD_SLS__c</fullName>
        <label>PLAN_LDRSHP_FAP_AWRD_SLS</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_FAP_CNT__c</fullName>
        <label>PLAN_LDRSHP_FAP_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_MRKT_TAG_1_AMT__c</fullName>
        <label>PLAN_LDRSHP_MRKT_TAG_1_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_MRKT_TAG_2_TXT__c</fullName>
        <label>PLAN_LDRSHP_MRKT_TAG_2_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_MRKT_TAG_3_TXT__c</fullName>
        <label>PLAN_LDRSHP_MRKT_TAG_3_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_MRKT_TAG_4_PCT__c</fullName>
        <label>PLAN_LDRSHP_MRKT_TAG_4_PCT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_ORD_INV_AMT__c</fullName>
        <label>PLAN_LDRSHP_ORD_INV_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_ORD_INV_CNT__c</fullName>
        <label>PLAN_LDRSHP_ORD_INV_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_REP_NO_ACTVTY_CNT__c</fullName>
        <label>PLAN_LDRSHP_REP_NO_ACTVTY_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_SBMTD_ORD_AMT__c</fullName>
        <label>PLAN_LDRSHP_SBMTD_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_SBMTD_ORD_CNT__c</fullName>
        <label>PLAN_LDRSHP_SBMTD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_REP_WITH_FAP_CNT__c</fullName>
        <label>PLAN_REP_WITH_FAP_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLS_MRKT_TAG_1_AMT__c</fullName>
        <label>SLS_MRKT_TAG_1_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLS_MRKT_TAG_2_NR__c</fullName>
        <label>SLS_MRKT_TAG_2_NR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLS_MRKT_TAG_3_PCT__c</fullName>
        <label>SLS_MRKT_TAG_3_PCT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLS_MRKT_TAG_4_TXT__c</fullName>
        <label>SLS_MRKT_TAG_4_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_ORG_CD__c</fullName>
        <label>SLS_ORG_CD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_ORG_LVL_NR__c</fullName>
        <label>SLS_ORG_LVL_NR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLS_ORG_NM__c</fullName>
        <label>SLS_ORG_NM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_MRKT_TAG_1_AMT__c</fullName>
        <label>SPPY_LDRSHP_MRKT_TAG_1_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_MRKT_TAG_2_TXT__c</fullName>
        <label>SPPY_LDRSHP_MRKT_TAG_2_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_MRKT_TAG_3_TXT__c</fullName>
        <label>SPPY_LDRSHP_MRKT_TAG_3_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_MRKT_TAG_4_PCT__c</fullName>
        <label>SPPY_LDRSHP_MRKT_TAG_4_PCT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_ORD_INV_AMT__c</fullName>
        <label>SPPY_LDRSHP_ORD_INV_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_ORD_INV_CNT__c</fullName>
        <label>SPPY_LDRSHP_ORD_INV_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_REP_NO_ACTVTY_CNT__c</fullName>
        <label>SPPY_LDRSHP_REP_NO_ACTVTY_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_SBMTD_ORD_AMT__c</fullName>
        <label>SPPY_LDRSHP_SBMTD_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_SBMTD_ORD_CNT__c</fullName>
        <label>SPPY_LDRSHP_SBMTD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_LDRSHP_FAP_AWRD_SLS__c</fullName>
        <label>TITL_1_LDRSHP_FAP_AWRD_SLS</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_LDRSHP_FAP_CNT__c</fullName>
        <label>TITL_1_LDRSHP_FAP_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_MRKT_TAG_1_AMT__c</fullName>
        <label>TITL_1_MRKT_TAG_1_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_MRKT_TAG_2_TXT__c</fullName>
        <label>TITL_1_MRKT_TAG_2_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TITL_1_MRKT_TAG_4_PCT__c</fullName>
        <label>TITL_1_MRKT_TAG_4_PCT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_ORD_INV_AMT__c</fullName>
        <label>TITL_1_ORD_INV_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_1_ORD_INV_CNT__c</fullName>
        <label>TITL_1_ORD_INV_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_REP_NO_ACTVTY_CNT__c</fullName>
        <label>TITL_1_REP_NO_ACTVTY_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_REP_WITH_FAP_CNT__c</fullName>
        <label>TITL_1_REP_WITH_FAP_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_SBMTD_ORD_AMT__c</fullName>
        <label>TITL_1_SBMTD_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_1_SBMTD_ORD_CNT__c</fullName>
        <label>TITL_1_SBMTD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_LDRSHP_FAP_AWRD_SLS__c</fullName>
        <label>TITL_2_LDRSHP_FAP_AWRD_SLS</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_LDRSHP_FAP_CNT__c</fullName>
        <label>TITL_2_LDRSHP_FAP_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_MRKT_TAG_1_AMT__c</fullName>
        <label>TITL_2_MRKT_TAG_1_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_MRKT_TAG_2_TXT__c</fullName>
        <label>TITL_2_MRKT_TAG_2_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TITL_2_MRKT_TAG_4_PCT__c</fullName>
        <label>TITL_2_MRKT_TAG_4_PCT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_ORD_INV_AMT__c</fullName>
        <label>TITL_2_ORD_INV_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_2_ORD_INV_CNT__c</fullName>
        <label>TITL_2_ORD_INV_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_REP_NO_ACTVTY_CNT__c</fullName>
        <label>TITL_2_REP_NO_ACTVTY_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_REP_WITH_FAP_CNT__c</fullName>
        <label>TITL_2_REP_WITH_FAP_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_SBMTD_ORD_AMT__c</fullName>
        <label>TITL_2_SBMTD_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_2_SBMTD_ORD_CNT__c</fullName>
        <label>TITL_2_SBMTD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_LDRSHP_FAP_AWRD_SLS__c</fullName>
        <label>TITL_3_LDRSHP_FAP_AWRD_SLS</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_LDRSHP_FAP_CNT__c</fullName>
        <label>TITL_3_LDRSHP_FAP_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_MRKT_TAG_1_AMT__c</fullName>
        <label>TITL_3_MRKT_TAG_1_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_MRKT_TAG_2_TXT__c</fullName>
        <label>TITL_3_MRKT_TAG_2_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TITL_3_MRKT_TAG_4_PCT__c</fullName>
        <label>TITL_3_MRKT_TAG_4_PCT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_ORD_INV_AMT__c</fullName>
        <label>TITL_3_ORD_INV_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_3_ORD_INV_CNT__c</fullName>
        <label>TITL_3_ORD_INV_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_REP_NO_ACTVTY_CNT__c</fullName>
        <label>TITL_3_REP_NO_ACTVTY_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_REP_WITH_FAP_CNT__c</fullName>
        <label>TITL_3_REP_WITH_FAP_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_SBMTD_ORD_AMT__c</fullName>
        <label>TITL_3_SBMTD_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_3_SBMTD_ORD_CNT__c</fullName>
        <label>TITL_3_SBMTD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTAL_REP_NO_ACTVTY_CNT__c</fullName>
        <formula>TITL_1_REP_NO_ACTVTY_CNT__c  +  TITL_2_REP_NO_ACTVTY_CNT__c  +  TITL_3_REP_NO_ACTVTY_CNT__c  +  TITL_4_REP_NO_ACTVTY_CNT__c  +  TITL_5_REP_NO_ACTVTY_CNT__c  +  UQ_TITL_1_REP_NO_ACTVTY_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TOTAL_REP_NO_ACTVTY_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTAL_SBMTD_ORD_CNT__c</fullName>
        <formula>TITL_1_SBMTD_ORD_CNT__c  +  TITL_2_SBMTD_ORD_CNT__c  +  TITL_3_SBMTD_ORD_CNT__c  +  TITL_4_SBMTD_ORD_CNT__c  +  TITL_5_SBMTD_ORD_CNT__c  +  UQ_TITL_1_SBMTD_ORD_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TOTAL_SBMTD_ORD_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_LDRSHP_FAP_AWRD_SLS__c</fullName>
        <label>UQ_TITL_1_LDRSHP_FAP_AWRD_SLS</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_LDRSHP_FAP_CNT__c</fullName>
        <label>UQ_TITL_1_LDRSHP_FAP_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_MRKT_TAG_1_AMT__c</fullName>
        <label>UQ_TITL_1_MRKT_TAG_1_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_MRKT_TAG_2_TXT__c</fullName>
        <label>UQ_TITL_1_MRKT_TAG_2_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_MRKT_TAG_3_TXT__c</fullName>
        <label>UQ_TITL_1_MRKT_TAG_3_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_MRKT_TAG_4_PCT__c</fullName>
        <label>UQ_TITL_1_MRKT_TAG_4_PCT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_ORD_INV_AMT__c</fullName>
        <label>UQ_TITL_1_ORD_INV_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_ORD_INV_CNT__c</fullName>
        <label>UQ_TITL_1_ORD_INV_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_REP_NO_ACTVTY_CNT__c</fullName>
        <label>UQ_TITL_1_REP_NO_ACTVTY_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>